[gd_scene load_steps=5 format=3 uid="uid://cper56cxk0sl1"]

[ext_resource type="Script" uid="uid://ds3gq65i0j2y3" path="res://scene/site/main.gd" id="1_6j1h7"]
[ext_resource type="PackedScene" uid="uid://cu546fiupegt0" path="res://scene/deck/deck.tscn" id="2_2vui8"]
[ext_resource type="Script" uid="uid://d16ghrtodt5g4" path="res://scene/site/go_to_button.gd" id="3_2vui8"]
[ext_resource type="PackedScene" uid="uid://5aq8sw700syb" path="res://scene/deck/handDeck.tscn" id="3_34a6l"]

[node name="site1" type="Node2D" node_paths=PackedStringArray("scene_1", "scene_2", "scene_3")]
script = ExtResource("1_6j1h7")
scene_1 = NodePath("deck")
scene_2 = NodePath("deck2")
scene_3 = NodePath("MindState_handDeck")
maxRandomItemNum = 1
minRandomItemNum = 4
siteItems = {
"Gold_ore": 100,
"Ice": 100,
"Silicon_ore": 100
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="deck" parent="." instance=ExtResource("2_2vui8")]
visible = false
offset_left = 355.0
offset_right = 1920.0

[node name="deck2" parent="." groups=["saveableDecks"] instance=ExtResource("2_2vui8")]
visible = false
offset_left = 355.0
offset_top = 360.0
offset_right = 1920.0
offset_bottom = 720.0

[node name="MindState_handDeck" parent="." instance=ExtResource("3_34a6l")]
visible = false
offset_left = 355.0
offset_top = 760.0
offset_right = 1920.0
offset_bottom = 1080.0
deckType = 4

[node name="Memory_handDeck" parent="." instance=ExtResource("3_34a6l")]
visible = false
offset_left = 355.0
offset_top = 760.0
offset_right = 1920.0
offset_bottom = 1080.0
deckType = 3

[node name="deckSelectButtonList" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 255.0
offset_top = 760.0
offset_right = 355.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="deckSelectButtonList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MindState_SelectButton" type="Button" parent="deckSelectButtonList/VBoxContainer"]
custom_minimum_size = Vector2(50, 70)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.6178153, 0.7128843, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
toggle_mode = true
keep_pressed_outside = true
text = "心绪"

[node name="Memory_SelectButton" type="Button" parent="deckSelectButtonList/VBoxContainer"]
custom_minimum_size = Vector2(50, 70)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.61960787, 0.7137255, 0, 1)
theme_override_font_sizes/font_size = 25
toggle_mode = true
keep_pressed_outside = true
text = "记忆"

[node name="Button" type="Button" parent="."]
offset_left = 1688.0
offset_top = 830.0
offset_right = 1856.0
offset_bottom = 982.0
text = "抽卡"

[node name="goToButton" type="Button" parent="."]
visible = false
offset_left = 80.0
offset_top = 384.0
offset_right = 234.0
offset_bottom = 492.0
text = "前往site2"
script = ExtResource("3_2vui8")
site = "res://site/site2.tscn"

[node name="Label" type="Label" parent="goToButton"]
layout_mode = 0
offset_left = 2.0
offset_top = -30.0
offset_right = 161.0
offset_bottom = -7.0
text = "site1"

[connection signal="button_down" from="Button" to="." method="get_some_card"]
[connection signal="button_down" from="goToButton" to="goToButton" method="_on_button_down"]
